Fixed some alignment issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,27 @@ $taskPadding: 10px;
 $colorOrange: #E89C0C;
 $colorLightGrey: #B7B8B6;
 
+
+@mixin box-shadow($top, $left, $blur, $color, $inset:"") {
+
+      -webkit-box-shadow:$top $left $blur $color #{$inset};
+      -moz-box-shadow:$top $left $blur $color #{$inset};
+      box-shadow:$top $left $blur $color #{$inset};
+    }
+    
+    
+@mixin shadow-curved-vertical {
+	&:before {
+		top:10px; bottom:10px;
+		left:0; right:0%;
+
+		@include box-shadow(0, 0, 13px, rgba(black, .5), 4px);
+		-moz-border-radius:10px / 100px;
+		border-radius:10px / 100px;
+	}
+}
+
+
 body{
     background: url(/images/bcg2.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
@@ -26,10 +47,16 @@ h2.form-signin-heading{
 
 .navbar{
     background-color: rgba(0,0,0,0.5);
+    font-size: 25px;
     }
 
 .navbar-brand a:hover{
     background-color: rgba(0,0,0,1);
+    }
+
+a.navbar-brand{
+    font-size: 25px !important;
+    font-family: 'Dosis';
     }
 .main-container{
     
@@ -37,10 +64,33 @@ h2.form-signin-heading{
     margin-right: auto;
     }
 
+.alert{
+    margin-top: 50px;
+    background-color: rgba(0,0,0,0.7);
+    color: $colorLightGrey;
+    border-color: $colorLightGrey;
+    }
+
+.dropdown-menu{
+    font-size: 18px;
+    background-color: rgba(0,0,0,0.5);
+    margin-top: 6px !important;
+    color: $colorOrange !important;
+    font-family: 'Open Sans';
+    padding-bottom: 10px;
+    padding-left: 10px;
+    }
+
+ .dropdown-menu a{
+    color: $colorOrange !important;
+    }
+
 .list-group-item{
     background-color: rgba(0,0,0,0.5) !important;
     border-color: rgba(255,255,255,0.4);
     color: $colorLightGrey;
+    border: none;
+    margin-right: 10px;
     }
 
 .panel-heading{
@@ -49,11 +99,13 @@ h2.form-signin-heading{
     text-transform: uppercase;
     font-size: 18px !important;
     border: none !important;
+    font-family: "Open Sans";
     }
     
 .panel{
     background-color: rgba(0,0,0,0.7);
-    border-color: rgba(255,255,255,0.4);
+    border-color: rgba(255,255,255,0.2);
+    @include shadow-curved-vertical;
     }
 
 #taskcontainer{
@@ -68,11 +120,12 @@ h2.form-signin-heading{
     }
 
 .task-name{
-    font-family: Dosis;
+    font-family: "Kite One";
     font-size: 30px;
     color: $colorLightGrey;
-    padding-bottom: 5px;
-    font-weight: bold;
+    margin-bottom: 10px;
+    padding-top: $taskPadding;
+    padding-bottom: $taskPadding;
     }
 
 .task-name a:hover{
